--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.1.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "@auth/prisma-adapter": "2.11.1",
+    "@google/generative-ai": "0.24.1",
+    "@prisma/client": "6.4.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "12.34.2",
+    "lucide-react": "0.574.0",
+    "next": "15.1.0",
+    "next-auth": "5.0.0-beta.25",
+    "prisma": "6.4.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "tailwind-merge": "^3.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.24",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
