--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "12.34.2",
     "lucide-react": "0.574.0",
-    "next": "15.1.0",
+    "next": "^15.5.12",
     "next-auth": "5.0.0-beta.25",
     "prisma": "6.4.1",
     "react": "19.0.0",
